--- a/Styles/Dictionary.xaml
+++ b/Styles/Dictionary.xaml
@@ -1,5 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    
+    <!--other small styles-->
     <Style x:Key="MainWindowLbl" TargetType="Label">
         <Setter Property="FontSize" Value="15" />
         <Setter Property="FontFamily" Value="Helvetica" />
