--- a/Views/CurrencyPage.xaml
+++ b/Views/CurrencyPage.xaml
@@ -17,18 +17,19 @@
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="50" />
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="3*"/>
-            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="19*"/>
+            <ColumnDefinition Width="41*"/>
+            <ColumnDefinition Width="15*"/>
         </Grid.ColumnDefinitions>
-        
+
         <Border x:Name="SearchAreaBorder"
                 Style="{DynamicResource SearchAreaBorder}" 
-                HorizontalAlignment="Center" 
-                 VerticalAlignment="Bottom" 
+                HorizontalAlignment="Right" 
+                 VerticalAlignment="Top" 
                  Width="140" 
                  Height="20" 
-                Grid.Row="0" Grid.Column="3">
+                Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="2" 
+                Margin="0,30,0,0">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition />
@@ -65,10 +66,10 @@
                 <Image Source="../Resources/backward.png" />
             </Grid>
         </Button>
-        
+
         <DataGrid x:Name="dgCurrencies"
                   Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
-                  Margin="10"
+                  Margin="10,10,10,10"
                   CanUserAddRows="True"
                   AutoGenerateColumns="False"
                   IsReadOnly="True"
@@ -124,6 +125,6 @@
                        Text="{Binding CurrentCurrency.VolumeUsd24Hr, StringFormat=N2}" 
                        Style="{StaticResource CurrencyText}"/>
         </Grid>
-        
+
     </Grid>
 </UserControl>
